# Effercio

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  setup_automake
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
docs/: Doxyfile  generate_docs.sh
source/: .Effercio.c.swp  Effercio  Effercio.c  Makefile  Makefile.am  Makefile.in  PrintSource  ProgramSpecification.txt  RBTree.c  RBTree.h  analysis.c  author_header.txt  defines.h  deque.c  deque.h  dynamic_arrays.c  dynamic_arrays.h  effercio_db.c  effercio_db.h  extract_index.c  extract_index.h  help.c  io_utils.c  io_utils.h  pythonsh  rundock.c  rundock.h  runmopac.c  runmopac.h  site.Bach  site.a41068  site.clever  site.corelli  site.jaguar  site.portal  site.portal2_dcoss  state.c  state.h  structs.c  structs.h  (+3 more)
source/.deps/: Effercio-Effercio.Po  Effercio-RBTree.Po  Effercio-analysis.Po  Effercio-deque.Po  Effercio-dynamic_arrays.Po  Effercio-effercio_db.Po  Effercio-extract_index.Po  Effercio-help.Po  Effercio-io_utils.Po  Effercio-rundock.Po  Effercio-runmopac.Po  Effercio-structs.Po  Effercio-tpl.Po  Effercio-util.Po
source/TestCode/: DebugList  DynamicArrays  DynamicArrays.c  MakeStackOps  MakeTestStructs  StackOps  StackOps.c  TestRestart.c  TestStat  TestStat.c  TestStructs  TestStructs.c  testval
testing/: .#runtest.1.2  .#runtest.1.3  .#runtest.1.4  .#runtest.1.8  3DAB  Debug.interactive.submit  Effercio.dockings  Effercio.results  Jaguar-test.submit  Test.submit  really_short_list  runtest
testing/analysis/adk/: MASTER_DOCK  NMR_DATA_DOCK
testing/analysis/qm/: MASTER_QM_000  NMR_DATA_QM
testing/dockings/: 3DAB_pocket_SJ000001113-1_T001S001I001C01.dlg  3DAB_pocket_SJ000001185-1_T001S001I001C01.dlg  3DAB_pocket_SJ000001185-1_T001S001I002C02.dlg  3DAB_pocket_SJ000001479-1_T001S001I001C01.dlg  3DAB_pocket_SJ000001479-2_T001S001I001C01.dlg  3DAB_pocket_SJ000001504-1_T001S001I001C01.dlg  3DAB_pocket_SJ000001528-1_T001S001I001C01.dlg  3DAB_pocket_SJ000001677-1_T001S001I001C01.dlg  3DAB_pocket_SJ000001677-1_T001S001I001C02.dlg  3DAB_pocket_SJ000001677-2_T001S001I001C01.dlg  3DAB_pocket_SJ000001677-2_T001S001I001C02.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C01.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C02.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C03.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C04.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C05.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C06.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C07.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C08.dlg  3DAB_pocket_SJ000002349-1_T001S001I001C09.dlg
testing/ligands/: SJ000001113-1_T001S001I001C01.pdbqt  SJ000001185-1_T001S001I001C01.pdbqt  SJ000001185-1_T001S001I002C02.pdbqt  SJ000001479-1_T001S001I001C01.pdbqt  SJ000001504-1_T001S001I001C01.pdbqt  SJ000001528-1_T001S001I001C01.pdbqt  SJ000001677-1_T001S001I001C01.pdbqt  SJ000001677-2_T001S001I001C02.pdbqt  SJ000002349-1_T001S001I001C01.pdbqt  SJ000002349-1_T001S001I001C02.pdbqt  SJ000002349-1_T001S001I001C03.pdbqt  SJ000002349-1_T001S001I001C04.pdbqt  SJ000002349-1_T001S001I001C05.pdbqt  SJ000002349-1_T001S001I001C06.pdbqt  SJ000002349-1_T001S001I001C07.pdbqt  SJ000002349-1_T001S001I001C08.pdbqt  SJ000002349-1_T001S001I001C09.pdbqt
testing/ligands/mol2_files/: SJ000001113-1_T001S001I001C01.mol2  SJ000001185-1_T001S001I001C01.mol2  SJ000001185-1_T001S001I002C02.mol2  SJ000001479-1_T001S001I001C01.mol2  SJ000001479-2_T001S001I001C01.mol2  SJ000001504-1_T001S001I001C01.mol2  SJ000001528-1_T001S001I001C01.mol2  SJ000001677-1_T001S001I001C01.mol2  SJ000001677-1_T001S001I001C02.mol2  SJ000001677-2_T001S001I001C01.mol2  SJ000001677-2_T001S001I001C02.mol2  SJ000002349-1_T001S001I001C01.mol2  SJ000002349-1_T001S001I001C02.mol2  SJ000002349-1_T001S001I001C03.mol2  SJ000002349-1_T001S001I001C04.mol2  SJ000002349-1_T001S001I001C05.mol2  SJ000002349-1_T001S001I001C06.mol2  SJ000002349-1_T001S001I001C07.mol2  SJ000002349-1_T001S001I001C08.mol2  SJ000002349-1_T001S001I001C09.mol2
testing/optimized/: SJ000001113-1_T001S001I001C01.PM6.out  SJ000001113-1_T001S001I001C01.PM6.syb  SJ000001113-1_T001S001I001C01_001.PM6.out  SJ000001113-1_T001S001I001C01_002.PM6.out  SJ000001113-1_T001S001I001C01_003.PM6.out  SJ000001113-1_T001S001I001C01_004.PM6.out  SJ000001113-1_T001S001I001C01_005.PM6.out  SJ000001185-1_T001S001I001C01.PM6.out  SJ000001185-1_T001S001I001C01.PM6.syb  SJ000001185-1_T001S001I001C01_001.PM6.out  SJ000001185-1_T001S001I001C01_002.PM6.out  SJ000001185-1_T001S001I001C01_003.PM6.out  SJ000001185-1_T001S001I001C01_004.PM6.out  SJ000001185-1_T001S001I002C02.PM6.out  SJ000001185-1_T001S001I002C02.PM6.syb  SJ000001185-1_T001S001I002C02_001.PM6.out  SJ000001479-1_T001S001I001C01.PM6.out  SJ000001479-1_T001S001I001C01.PM6.syb  SJ000001479-1_T001S001I001C01_001.PM6.out  SJ000001479-2_T001S001I001C01.PM6.out  SJ000001479-2_T001S001I001C01_001.PM6.out  SJ000001504-1_T001S001I001C01.PM6.out  SJ000001504-1_T001S001I001C01.PM6.syb  SJ000001504-1_T001S001I001C01_001.PM6.out  SJ000001504-1_T001S001I001C01_002.PM6.out  SJ000001528-1_T001S001I001C01.PM6.out  SJ000001528-1_T001S001I001C01.PM6.syb  SJ000001528-1_T001S001I001C01_001.PM6.out  SJ000001528-1_T001S001I001C01_002.PM6.out  SJ000001528-1_T001S001I001C01_003.PM6.out  SJ000001677-1_T001S001I001C01.PM6.out  SJ000001677-1_T001S001I001C01_001.PM6.out  SJ000001677-1_T001S001I001C02.PM6.out  SJ000001677-1_T001S001I001C02_001.PM6.out  SJ000001677-2_T001S001I001C01.PM6.out  SJ000001677-2_T001S001I001C01.PM6.syb  SJ000001677-2_T001S001I001C01_001.PM6.out  SJ000001677-2_T001S001I001C02.PM6.out  SJ000001677-2_T001S001I001C02.PM6.syb  SJ000001677-2_T001S001I001C02_001.PM6.out  (+36 more)
testing/receptors/: 3DAB_pocket.glg  3DAB_pocket.gpf  3DAB_pocket.maps.fld  3DAB_pocket.maps.xyz  3DAB_pocket.pdbqt
